sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var Change1: Boolean=true
  var Change2: Boolean= true
  var L =getNombreValeurs()
  
  while (Change1==true || Change2==true){
  for (k<- L-2 to 0 by -1 ){
    Change1=false
    Change2=false
    
    if (getValeur(k) > getValeur(k+1)){
      echange(k,k+1)
      Change1=true
  	}      
  }     
  for (l<-0 to L-2){
    	if (getValeur(l) > getValeur(l+1)){
      	echange(l,l+1)
        change2=true
    
  		}
  }
  
  
}
}